--- a/package.json
+++ b/package.json
@@ -35,9 +35,15 @@
     "release": "lerna run release"
   },
   "devDependencies": {
-    "@cubos/eslint-config": "^2.2.0",
-    "lerna": "^8.0.1",
-    "sherif": "^0.8.0"
+    "@angular-eslint/eslint-plugin": "^17.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-xo": "^0.44.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^52.0.0",
+    "lerna": "^8.1.2",
+    "sherif": "^0.8.1"
   },
   "workspaces": [
     "packages/*"
