Ajustar campo de markdown da issue

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -6,9 +6,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 🐞 Reportar um problema na IDE
-
         Agradecemos por dedicar um tempo para reportar um problema na IDE. Para nos ajudar a entender e corrigir o problema, por favor, preencha o formulário abaixo com o máximo de detalhes possível.
+
+        Não se esqueça de ajustar o título acima para descrever o problema de forma resumida.
   - type: textarea
     id: description
     attributes:
