--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name: ❓ Dúvidas / Perguntas
-    url: https://github.com/dgadelha/Portugol-Webstudio/discussions/new?category=perguntas-respostas
+    url: https://github.com/dgadelha/Portugol-Webstudio/discussions/new?category=d%C3%BAvidas-perguntas
     about: Faça perguntas sobre o uso da IDE, a linguagem Portugol ou qualquer outro assunto relacionado.
   - name: 💡 Ideias e sugestões
     url: https://github.com/dgadelha/Portugol-Webstudio/discussions/new?category=ideias-e-sugest%C3%B5es
