Melhorias de acessibilidade e ajustes na tela inicial e ícones

--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -40,7 +40,9 @@
     "@angular/platform-browser": "^17.3.3",
     "@angular/platform-browser-dynamic": "^17.3.3",
     "@angular/router": "^17.3.3",
+    "@fontsource/lato": "^5.0.21",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@mdi/svg": "^7.4.47",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
