--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,11 @@
                 "input": "packages/ide/src/public/",
                 "output": "/"
               },
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/@mdi/svg/svg/",
+                "output": "./assets/mdi/"
+              },
               "packages/ide/src/favicon.ico",
               "packages/ide/src/assets"
             ],
