Ajustar regra do SW para baixar os assets e tornar o Portugol mais amigável offline

--- a/packages/ide/ngsw-config.json
+++ b/packages/ide/ngsw-config.json
@@ -11,8 +11,7 @@
     },
     {
       "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "prefetch",
+      "installMode": "prefetch",
       "resources": {
         "files": ["/assets/**", "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"]
       }
