--- a/packages/ide/ngsw-config.json
+++ b/packages/ide/ngsw-config.json
@@ -18,7 +18,8 @@
           "/assets/logo/**",
           "/assets/portugol-worker/**",
           "/assets/recursos/**",
-          "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)",
+          "/assets/mdi/**"
         ]
       }
     },
@@ -27,7 +28,7 @@
       "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
-        "files": ["/assets/monaco-editor/**", "/assets/mdi/**"]
+        "files": ["/assets/monaco-editor/**"]
       }
     }
   ]
