--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -23,59 +23,58 @@
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "scripts": {
-    "start": "ng serve --disable-host-check",
+    "start": "ng serve",
     "release": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^17.3.6",
-    "@angular/cdk": "^17.3.6",
-    "@angular/common": "^17.3.6",
-    "@angular/compiler": "^17.3.6",
-    "@angular/core": "^17.3.6",
-    "@angular/fire": "^17.0.1",
-    "@angular/forms": "^17.3.6",
-    "@angular/material": "^17.3.6",
-    "@angular/platform-browser": "^17.3.6",
-    "@angular/platform-browser-dynamic": "^17.3.6",
-    "@angular/router": "^17.3.6",
-    "@angular/service-worker": "^17.3.6",
+    "@angular/animations": "^18.1.1",
+    "@angular/cdk": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/fire": "^18.0.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/material": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@angular/service-worker": "^18.1.1",
     "@fontsource/lato": "^5.0.21",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@mdi/svg": "^7.4.47",
-    "@ngneat/overview": "^6.0.0",
-    "@ngxpert/hot-toast": "^2.0.0",
+    "@ngneat/overview": "^6.1.0",
+    "@ngxpert/hot-toast": "^3.0.0",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular-ivy": "^7.112.2",
+    "@sentry/angular": "^8.19.0",
     "angular-split": "^17.2.0",
-    "angular-svg-icon": "^17.0.0",
+    "angular-svg-icon": "^18.0.1",
     "antlr4ng": "^3.0.4",
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
-    "firebase": "^10.11.1",
-    "monaco-editor": "^0.48.0",
+    "firebase": "^10.12.4",
+    "monaco-editor": "^0.50.0",
     "ng-keyboard-shortcuts": "^13.0.8",
-    "ngx-build-plus": "^17.0.0",
     "ngx-google-analytics": "^14.0.1",
     "rxfire": "^6.0.5",
     "rxjs": "~7.8.1",
     "text-encoding": "^0.7.0",
-    "tslib": "^2.6.2",
+    "tslib": "^2.6.3",
     "util": "^0.12.5",
-    "zone.js": "~0.14.5"
+    "zone.js": "~0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.6",
-    "@angular/cli": "^17.3.6",
-    "@angular/compiler-cli": "^17.3.6",
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
     "@types/file-saver": "^2.0.7",
     "@types/text-encoding": "^0.0.39",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.4"
   }
 }
