--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/renovate",
   "extends": [
-    "config:js-app",
+    "config:base",
     ":preserveSemverRanges",
     ":disableDependencyDashboard",
     ":maintainLockFilesWeekly",
