--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -55,12 +55,13 @@
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.13.1",
+    "iconv-lite": "^0.6.3",
+    "jschardet": "^3.1.3",
     "monaco-editor": "^0.51.0",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
     "rxfire": "^6.0.5",
     "rxjs": "~7.8.1",
-    "text-encoding": "^0.7.0",
     "tslib": "^2.7.0",
     "util": "^0.12.5",
     "zone.js": "~0.14.0"
@@ -70,7 +71,6 @@
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.4",
     "@types/file-saver": "^2.0.7",
-    "@types/text-encoding": "^0.0.39",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.4"
   }
