Tornar a fonte da seção Ajuda (PT Sans) disponível offline

--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/service-worker": "^18.2.5",
     "@fontsource/lato": "^5.1.0",
+    "@fontsource/pt-sans": "^5.1.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@mdi/svg": "^7.4.47",
     "@ngxpert/hot-toast": "^3.0.1",
@@ -48,7 +49,7 @@
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^8.30.0",
+    "@sentry/angular": "^8.31.0",
     "angular-split": "^17.2.0",
     "angular-svg-icon": "^18.0.2",
     "antlr4ng": "^3.0.5",
