--- a/angular.json
+++ b/angular.json
@@ -77,6 +77,11 @@
                 "input": "packages/ide/src/",
                 "output": "/"
               },
+              {
+                "glob": "**/*",
+                "input": "node_modules/@fontsource/pt-sans",
+                "output": "assets/fonts/pt-sans/"
+              },
               "packages/ide/src/favicon.ico",
               "packages/ide/src/assets"
             ],
