--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -29,16 +29,16 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^18.2.9",
-    "@angular/common": "^18.2.9",
-    "@angular/compiler": "^18.2.9",
-    "@angular/core": "^18.2.9",
-    "@angular/fire": "^18.0.1",
-    "@angular/forms": "^18.2.9",
-    "@angular/material": "^18.2.10",
-    "@angular/platform-browser": "^18.2.9",
-    "@angular/platform-browser-dynamic": "^18.2.9",
-    "@angular/service-worker": "^18.2.9",
+    "@angular/animations": "^19.0.3",
+    "@angular/common": "^19.0.3",
+    "@angular/compiler": "^19.0.3",
+    "@angular/core": "^19.0.3",
+    "@angular/fire": "^19.0.0-rc.0",
+    "@angular/forms": "^19.0.3",
+    "@angular/material": "^19.0.2",
+    "@angular/platform-browser": "^19.0.3",
+    "@angular/platform-browser-dynamic": "^19.0.3",
+    "@angular/service-worker": "^19.0.3",
     "@fontsource/lato": "^5.1.0",
     "@fontsource/pt-sans": "^5.1.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
@@ -49,30 +49,29 @@
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^8.35.0",
-    "angular-split": "^17.2.0",
-    "angular-svg-icon": "^18.0.2",
-    "antlr4ng": "^3.0.7",
+    "@sentry/angular": "^8.42.0",
+    "angular-split": "^18.0.0",
+    "angular-svg-icon": "^19.0.1",
+    "antlr4ng": "^3.0.10",
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
-    "firebase": "^10.14.1",
+    "firebase": "^11.0.2",
     "iconv-lite": "^0.6.3",
     "jschardet": "^3.1.4",
     "monaco-editor": "^0.52.0",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
-    "rxfire": "^6.0.5",
     "rxjs": "~7.8.1",
-    "tslib": "^2.8.0",
+    "tslib": "^2.8.1",
     "util": "^0.12.5",
-    "zone.js": "~0.14.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.10",
-    "@angular/cli": "^18.2.10",
-    "@angular/compiler-cli": "^18.2.9",
+    "@angular-devkit/build-angular": "^19.0.4",
+    "@angular/cli": "^19.0.4",
+    "@angular/compiler-cli": "^19.0.3",
     "@types/file-saver": "^2.0.7",
     "ts-node": "^10.9.2",
-    "typescript": "~5.5.4"
+    "typescript": "~5.6.3"
   }
 }
