--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -49,6 +49,7 @@
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
+    "@portugol-webstudio/graphics": "*",
     "@sentry/angular": "^8.47.0",
     "angular-split": "^18.0.0",
     "angular-svg-icon": "^19.1.0",
