--- a/.github/workflows/deloy-beta.yml
+++ b/.github/workflows/deloy-beta.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Setup Firebase Hosting 🔥
         env:
-          BETA_FIREBASE_PROJECT_ID: ${{ secrets.BETA_FIREBASE_PROJECT_ID }}
+          BETA_FIREBASE_PROJECT_ID: ${{ vars.BETA_FIREBASE_PROJECT_ID }}
           BETA_FIREBASE_HOSTING_SITE: ${{ vars.BETA_FIREBASE_HOSTING_SITE }}
         run: |
           jq -n --arg default "$BETA_FIREBASE_PROJECT_ID" '{ "projects": { "default": $default } }' > .firebaserc
