Revert "Corrigir path do worker"
This reverts commit 8eeac40df3014f07d64896da91881a64388ceea8.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
                   ]
                 },
                 {
-                  "source": "**/portugol-worker/worker.js",
+                  "source": "**/portugol-worker.js",
                   "headers": [
                     {
                       "key": "Cache-Control",
