--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
     ":maintainLockFilesWeekly",
     ":rebaseStalePrs"
   ],
+  "baseBranches": ["beta"],
   "ignoreDeps": ["typescript"],
   "ignorePresets": [":dependencyDashboard"],
   "packageRules": [
