Documentação de Bibliotecas

--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -44,6 +44,7 @@
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@mdi/svg": "^7.4.47",
     "@ngxpert/hot-toast": "^4.1.1",
+    "@portugol-recursos/bibliotecas": "^0.0.0-dev.6",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
@@ -61,6 +62,7 @@
     "monaco-editor": "^0.52.2",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
+    "ngx-markdown": "^19.1.0",
     "ngx-webstorage": "^19.0.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
