--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "url": "https://github.com/dgadelha/Portugol-Webstudio/issues"
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
-  "packageManager": "^npm@10.7.0",
+  "packageManager": "^npm@11.0.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "sherif && npm run eslint:check",
     "eslint:fix": "eslint --fix 'packages/**/*.{ts,js,html}'",
@@ -36,19 +39,20 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "angular-eslint": "^19.1.0",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-unicorn": "^57.0.0",
-    "lerna": "^8.1.9",
+    "@eslint/js": "^9.24.0",
+    "angular-eslint": "^19.3.0",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-unicorn": "^58.0.0",
+    "lerna": "^8.2.2",
     "patch-package": "^8.0.0",
-    "sherif": "^1.3.0",
+    "sherif": "^1.5.0",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^8.30.1"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "overrides": {
+    "TODO_REMOVER": "*",
+    "vite": "^6.2.5"
+  }
 }
