--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -29,50 +29,50 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.6",
-    "@angular/common": "^19.1.6",
-    "@angular/compiler": "^19.1.6",
-    "@angular/core": "^19.1.6",
-    "@angular/fire": "^19.0.0",
-    "@angular/forms": "^19.1.6",
-    "@angular/material": "^19.1.4",
-    "@angular/platform-browser": "^19.1.6",
-    "@angular/platform-browser-dynamic": "^19.1.6",
-    "@angular/service-worker": "^19.1.6",
-    "@fontsource/lato": "^5.1.1",
-    "@fontsource/pt-sans": "^5.1.1",
+    "@angular/animations": "^19.2.7",
+    "@angular/common": "^19.2.7",
+    "@angular/compiler": "^19.2.7",
+    "@angular/core": "^19.2.7",
+    "@angular/fire": "^19.1.0",
+    "@angular/forms": "^19.2.7",
+    "@angular/material": "^19.2.10",
+    "@angular/platform-browser": "^19.2.7",
+    "@angular/platform-browser-dynamic": "^19.2.7",
+    "@angular/service-worker": "^19.2.7",
+    "@fontsource/lato": "^5.2.5",
+    "@fontsource/pt-sans": "^5.2.5",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@mdi/svg": "^7.4.47",
-    "@ngxpert/hot-toast": "^4.1.1",
+    "@ngxpert/hot-toast": "^4.1.2",
     "@portugol-recursos/bibliotecas": "^0.0.0-dev.6",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^9.1.0",
+    "@sentry/angular": "^9.13.0",
     "angular-split": "^19.0.0",
     "angular-svg-icon": "^19.1.1",
-    "antlr4ng": "^3.0.14",
+    "antlr4ng": "^3.0.16",
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
-    "firebase": "^11.3.1",
+    "firebase": "^11.6.0",
     "iconv-lite": "^0.6.3",
     "jschardet": "^3.1.4",
     "monaco-editor": "^0.52.2",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
-    "ngx-markdown": "^19.1.0",
+    "ngx-markdown": "^19.1.1",
     "ngx-webstorage": "^19.0.1",
-    "rxjs": "~7.8.1",
+    "rxjs": "7.8.1",
     "tslib": "^2.8.1",
     "util": "^0.12.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@angular/cli": "^19.1.7",
-    "@angular/compiler-cli": "^19.1.6",
+    "@angular-devkit/build-angular": "^19.2.8",
+    "@angular/cli": "^19.2.8",
+    "@angular/compiler-cli": "^19.2.7",
     "@types/file-saver": "^2.0.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.3"
