--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -38,8 +38,8 @@
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/runtime": "*",
-    "antlr4ng": "^3.0.14",
-    "rxjs": "~7.8.1"
+    "antlr4ng": "^3.0.16",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "typescript": "~5.7.3"
