--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -46,6 +46,7 @@
     "@ngxpert/hot-toast": "^4.1.2",
     "@portugol-recursos/bibliotecas": "^0.0.0-dev.6",
     "@portugol-webstudio/antlr": "*",
+    "@portugol-webstudio/monaco": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
