--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -29,52 +29,51 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.10",
-    "@angular/common": "^19.2.10",
-    "@angular/compiler": "^19.2.10",
-    "@angular/core": "^19.2.10",
-    "@angular/fire": "^19.1.0",
-    "@angular/forms": "^19.2.10",
-    "@angular/material": "^19.2.15",
-    "@angular/platform-browser": "^19.2.10",
-    "@angular/platform-browser-dynamic": "^19.2.10",
-    "@angular/service-worker": "^19.2.10",
-    "@fontsource/lato": "^5.2.5",
-    "@fontsource/pt-sans": "^5.2.5",
+    "@angular/animations": "^20.0.3",
+    "@angular/common": "^20.0.3",
+    "@angular/compiler": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/fire": "^20.0.1",
+    "@angular/forms": "^20.0.3",
+    "@angular/material": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/service-worker": "^20.0.3",
+    "@fontsource/lato": "^5.2.6",
+    "@fontsource/pt-sans": "^5.2.6",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@mdi/svg": "^7.4.47",
-    "@ngxpert/hot-toast": "^4.1.2",
+    "@ngxpert/hot-toast": "^5.0.1",
     "@portugol-recursos/bibliotecas": "^0.0.0-dev.6",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^9.17.0",
+    "@sentry/angular": "^9.28.1",
     "angular-split": "^19.0.0",
     "angular-svg-icon": "^19.1.1",
     "antlr4ng": "^3.0.16",
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
-    "firebase": "^11.7.1",
+    "firebase": "^11.9.1",
     "iconv-lite": "^0.6.3",
     "jschardet": "^3.1.4",
     "monaco-editor": "^0.52.2",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
-    "ngx-markdown": "^19.1.1",
+    "ngx-markdown": "^20.0.0",
     "ngx-webstorage": "^19.0.1",
     "rxjs": "7.8.1",
     "tslib": "^2.8.1",
     "util": "^0.12.5",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.10",
+    "@angular/build": "^20.0.2",
+    "@angular/cli": "^20.0.2",
+    "@angular/compiler-cli": "^20.0.3",
     "@types/file-saver": "^2.0.7",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.3"
+    "typescript": "~5.8.3"
   }
 }
