--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "antlr4ng-cli": "^2.0.0",
-    "webpack": "^5.99.8",
+    "babel-loader": "^10.0.0",
+    "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1"
   }
 }
