--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,7 @@
 name: Publish
+permissions:
+  contents: read
+  packages: write
 on:
   push:
     branches:
@@ -18,8 +21,7 @@ jobs:
           scope: "@portugol-webstudio"
 
       - name: Install dependencies 🔧
-        run: |
-          npm ci --include=dev
+        run: npm ci --include=dev
 
       - name: Build code 🚚
         run: |
