--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -39,7 +39,7 @@
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/runtime": "*",
     "antlr4ng": "^3.0.16",
-    "rxjs": "7.8.2"
+    "rxjs": "~7.8.2"
   },
   "devDependencies": {
     "typescript": "~5.9.2"
