Ajustar configuração do Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     "group:all",
     ":disableDependencyDashboard",
     ":maintainLockFilesWeekly",
+    ":preserveSemverRanges",
     ":rebaseStalePrs"
   ],
   "baseBranches": ["beta"],
