--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Node.js 📦
         uses: actions/setup-node@v6
         with:
-          node-version: 22
+          node-version: lts/*
 
       - name: Install dependencies 🔧
         run: npm ci --include=dev
